--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,9 @@
             "request": "launch",
             "type": "dart",
             "program": "lib/main.dart",
+            "args": [
+                "--dart-define=ENV=local"
+            ]
             // "args": [
             //     "--dart-define-from-file=dart_defines/uat.env"
             // ]
