--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^1.2.2
   json_annotation: ^4.9.0
   flutter_dotenv: ^5.2.1
+  clay_containers: ^0.3.4
 
 dev_dependencies:
   flutter_test:
