--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   json_annotation: ^4.9.0
   flutter_dotenv: ^5.2.1
   clay_containers: ^0.3.4
+  cached_network_image: ^3.4.0
 
 dev_dependencies:
   flutter_test:
