Added static json to read pet data, managed via env

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,8 @@ flutter:
     - environments/.env.local
     - environments/.env.dev
     - environments/.env.prod
+    - lib/data/mock/pet.json
+    - lib/data/mock/pets_list_response.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
